// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Solid/JSX > babel > transforms example test case: browser-current-esm > esm/index-browser-current-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: esm

import { template } from 'solid-js/web';
var _tmpl$ = /*#__PURE__*/template(\`<button>\`);
function Button() {
  return _tmpl$();
}
function Element() {
  return "some content";
}
export { Button, Element as default };
//# sourceMappingURL=index-browser-current-esm.js.map
"
`;

exports[`Solid/JSX > babel > transforms example test case: browser-current-lib > lib/index-browser-current-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: lib

'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});
const web = require('solid-js/web');
var _tmpl$ = /*#__PURE__*/web.template(\`<button>\`);
function Button() {
  return _tmpl$();
}
function Element() {
  return "some content";
}
exports.Button = Button;
exports.default = Element;
//# sourceMappingURL=index-browser-current-lib.js.map
"
`;

exports[`Solid/JSX > babel > transforms example test case: browser-current-umd > umd/index-browser-current-umd.js 1`] = `
"(function (global, factory) {
  if (typeof define === "function" && define.amd) {
    define(["exports", "solid-js/web"], factory);
  } else if (typeof exports !== "undefined") {
    factory(exports, require("solid-js/web"));
  } else {
    var mod = {
      exports: {}
    };
    factory(mod.exports, global.web);
    global.exampleSolid = mod.exports;
  }
})(typeof globalThis !== "undefined" ? globalThis : typeof self !== "undefined" ? self : this, function (_exports, _web) {
  "use strict";

  Object.defineProperty(_exports, "__esModule", {
    value: true
  });
  _exports.Button = Button;
  _exports.default = Element;
  // Bundled with Packemon: https://packemon.dev
  // Platform: browser, Support: current, Format: umd

  var _tmpl$ = /*#__PURE__*/(0, _web.template)(\`<button>\`);
  function Button() {
    return _tmpl$();
  }
  function Element() {
    return "some content";
  }
});
//# sourceMappingURL=index-browser-current-umd.js.map
"
`;

exports[`Solid/JSX > babel > transforms example test case: browser-experimental-esm > esm/index-browser-experimental-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: esm

import { template } from 'solid-js/web';
var _tmpl$ = /*#__PURE__*/template(\`<button>\`);
function Button() {
  return _tmpl$();
}
function Element() {
  return "some content";
}
export { Button, Element as default };
//# sourceMappingURL=index-browser-experimental-esm.js.map
"
`;

exports[`Solid/JSX > babel > transforms example test case: browser-experimental-lib > lib/index-browser-experimental-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: lib

'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});
const web = require('solid-js/web');
var _tmpl$ = /*#__PURE__*/web.template(\`<button>\`);
function Button() {
  return _tmpl$();
}
function Element() {
  return "some content";
}
exports.Button = Button;
exports.default = Element;
//# sourceMappingURL=index-browser-experimental-lib.js.map
"
`;

exports[`Solid/JSX > babel > transforms example test case: browser-experimental-umd > umd/index-browser-experimental-umd.js 1`] = `
"(function (global, factory) {
  if (typeof define === "function" && define.amd) {
    define(["exports", "solid-js/web"], factory);
  } else if (typeof exports !== "undefined") {
    factory(exports, require("solid-js/web"));
  } else {
    var mod = {
      exports: {}
    };
    factory(mod.exports, global.web);
    global.exampleSolid = mod.exports;
  }
})(typeof globalThis !== "undefined" ? globalThis : typeof self !== "undefined" ? self : this, function (_exports, _web) {
  "use strict";

  Object.defineProperty(_exports, "__esModule", {
    value: true
  });
  _exports.Button = Button;
  _exports.default = Element;
  // Bundled with Packemon: https://packemon.dev
  // Platform: browser, Support: experimental, Format: umd

  var _tmpl$ = /*#__PURE__*/(0, _web.template)(\`<button>\`);
  function Button() {
    return _tmpl$();
  }
  function Element() {
    return "some content";
  }
});
//# sourceMappingURL=index-browser-experimental-umd.js.map
"
`;

exports[`Solid/JSX > babel > transforms example test case: browser-legacy-esm > esm/index-browser-legacy-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: esm

import { template } from 'solid-js/web';
var _tmpl$ = /*#__PURE__*/template(\`<button>\`);
function Button() {
  return _tmpl$();
}
function Element() {
  return "some content";
}
export { Button, Element as default };
//# sourceMappingURL=index-browser-legacy-esm.js.map
"
`;

exports[`Solid/JSX > babel > transforms example test case: browser-legacy-lib > lib/index-browser-legacy-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: lib

'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});
const web = require('solid-js/web');
var _tmpl$ = /*#__PURE__*/web.template(\`<button>\`);
function Button() {
  return _tmpl$();
}
function Element() {
  return "some content";
}
exports.Button = Button;
exports.default = Element;
//# sourceMappingURL=index-browser-legacy-lib.js.map
"
`;

exports[`Solid/JSX > babel > transforms example test case: browser-legacy-umd > umd/index-browser-legacy-umd.js 1`] = `
"(function (global, factory) {
  if (typeof define === "function" && define.amd) {
    define(["exports", "solid-js/web"], factory);
  } else if (typeof exports !== "undefined") {
    factory(exports, require("solid-js/web"));
  } else {
    var mod = {
      exports: {}
    };
    factory(mod.exports, global.web);
    global.exampleSolid = mod.exports;
  }
})(typeof globalThis !== "undefined" ? globalThis : typeof self !== "undefined" ? self : this, function (_exports, _web) {
  "use strict";

  Object.defineProperty(_exports, "__esModule", {
    value: true
  });
  _exports.Button = Button;
  _exports.default = Element;
  // Bundled with Packemon: https://packemon.dev
  // Platform: browser, Support: legacy, Format: umd

  var _tmpl$ = /*#__PURE__*/(0, _web.template)(\`<button>\`);
  function Button() {
    return _tmpl$();
  }
  function Element() {
    return "some content";
  }
});
//# sourceMappingURL=index-browser-legacy-umd.js.map
"
`;

exports[`Solid/JSX > babel > transforms example test case: browser-stable-esm > esm/index-browser-stable-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: esm

import { template } from 'solid-js/web';
var _tmpl$ = /*#__PURE__*/template(\`<button>\`);
function Button() {
  return _tmpl$();
}
function Element() {
  return "some content";
}
export { Button, Element as default };
//# sourceMappingURL=index-browser-stable-esm.js.map
"
`;

exports[`Solid/JSX > babel > transforms example test case: browser-stable-lib > lib/index-browser-stable-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: lib

'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});
const web = require('solid-js/web');
var _tmpl$ = /*#__PURE__*/web.template(\`<button>\`);
function Button() {
  return _tmpl$();
}
function Element() {
  return "some content";
}
exports.Button = Button;
exports.default = Element;
//# sourceMappingURL=index-browser-stable-lib.js.map
"
`;

exports[`Solid/JSX > babel > transforms example test case: browser-stable-umd > umd/index-browser-stable-umd.js 1`] = `
"(function (global, factory) {
  if (typeof define === "function" && define.amd) {
    define(["exports", "solid-js/web"], factory);
  } else if (typeof exports !== "undefined") {
    factory(exports, require("solid-js/web"));
  } else {
    var mod = {
      exports: {}
    };
    factory(mod.exports, global.web);
    global.exampleSolid = mod.exports;
  }
})(typeof globalThis !== "undefined" ? globalThis : typeof self !== "undefined" ? self : this, function (_exports, _web) {
  "use strict";

  Object.defineProperty(_exports, "__esModule", {
    value: true
  });
  _exports.Button = Button;
  _exports.default = Element;
  // Bundled with Packemon: https://packemon.dev
  // Platform: browser, Support: stable, Format: umd

  var _tmpl$ = /*#__PURE__*/(0, _web.template)(\`<button>\`);
  function Button() {
    return _tmpl$();
  }
  function Element() {
    return "some content";
  }
});
//# sourceMappingURL=index-browser-stable-umd.js.map
"
`;

exports[`Solid/JSX > babel > transforms example test case: electron-current-esm > esm/index-electron-current-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: current, Format: esm

import { template } from 'solid-js/web';
var _tmpl$ = /*#__PURE__*/template(\`<button>\`);
function Button() {
  return _tmpl$();
}
function Element() {
  return "some content";
}
export { Button, Element as default };
//# sourceMappingURL=index-electron-current-esm.js.map
"
`;

exports[`Solid/JSX > babel > transforms example test case: electron-current-lib > lib/index-electron-current-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: current, Format: lib

'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});
const web = require('solid-js/web');
var _tmpl$ = /*#__PURE__*/web.template(\`<button>\`);
function Button() {
  return _tmpl$();
}
function Element() {
  return "some content";
}
exports.Button = Button;
exports.default = Element;
//# sourceMappingURL=index-electron-current-lib.js.map
"
`;

exports[`Solid/JSX > babel > transforms example test case: electron-experimental-esm > esm/index-electron-experimental-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: experimental, Format: esm

import { template } from 'solid-js/web';
var _tmpl$ = /*#__PURE__*/template(\`<button>\`);
function Button() {
  return _tmpl$();
}
function Element() {
  return "some content";
}
export { Button, Element as default };
//# sourceMappingURL=index-electron-experimental-esm.js.map
"
`;

exports[`Solid/JSX > babel > transforms example test case: electron-experimental-lib > lib/index-electron-experimental-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: experimental, Format: lib

'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});
const web = require('solid-js/web');
var _tmpl$ = /*#__PURE__*/web.template(\`<button>\`);
function Button() {
  return _tmpl$();
}
function Element() {
  return "some content";
}
exports.Button = Button;
exports.default = Element;
//# sourceMappingURL=index-electron-experimental-lib.js.map
"
`;

exports[`Solid/JSX > babel > transforms example test case: electron-legacy-esm > esm/index-electron-legacy-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: legacy, Format: esm

import { template } from 'solid-js/web';
var _tmpl$ = /*#__PURE__*/template(\`<button>\`);
function Button() {
  return _tmpl$();
}
function Element() {
  return "some content";
}
export { Button, Element as default };
//# sourceMappingURL=index-electron-legacy-esm.js.map
"
`;

exports[`Solid/JSX > babel > transforms example test case: electron-legacy-lib > lib/index-electron-legacy-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: legacy, Format: lib

'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});
const web = require('solid-js/web');
var _tmpl$ = /*#__PURE__*/web.template(\`<button>\`);
function Button() {
  return _tmpl$();
}
function Element() {
  return "some content";
}
exports.Button = Button;
exports.default = Element;
//# sourceMappingURL=index-electron-legacy-lib.js.map
"
`;

exports[`Solid/JSX > babel > transforms example test case: electron-stable-esm > esm/index-electron-stable-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: stable, Format: esm

import { template } from 'solid-js/web';
var _tmpl$ = /*#__PURE__*/template(\`<button>\`);
function Button() {
  return _tmpl$();
}
function Element() {
  return "some content";
}
export { Button, Element as default };
//# sourceMappingURL=index-electron-stable-esm.js.map
"
`;

exports[`Solid/JSX > babel > transforms example test case: electron-stable-lib > lib/index-electron-stable-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: stable, Format: lib

'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});
const web = require('solid-js/web');
var _tmpl$ = /*#__PURE__*/web.template(\`<button>\`);
function Button() {
  return _tmpl$();
}
function Element() {
  return "some content";
}
exports.Button = Button;
exports.default = Element;
//# sourceMappingURL=index-electron-stable-lib.js.map
"
`;

exports[`Solid/JSX > babel > transforms example test case: native-current-esm > esm/index-native-current-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: current, Format: esm

import { template } from 'solid-js/web';
var _tmpl$ = /*#__PURE__*/template(\`<button>\`);
function Button() {
  return _tmpl$();
}
function Element() {
  return "some content";
}
export { Button, Element as default };
//# sourceMappingURL=index-native-current-esm.js.map
"
`;

exports[`Solid/JSX > babel > transforms example test case: native-current-lib > lib/index-native-current-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: current, Format: lib

'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});
const web = require('solid-js/web');
var _tmpl$ = /*#__PURE__*/web.template(\`<button>\`);
function Button() {
  return _tmpl$();
}
function Element() {
  return "some content";
}
exports.Button = Button;
exports.default = Element;
//# sourceMappingURL=index-native-current-lib.js.map
"
`;

exports[`Solid/JSX > babel > transforms example test case: native-experimental-esm > esm/index-native-experimental-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: experimental, Format: esm

import { template } from 'solid-js/web';
var _tmpl$ = /*#__PURE__*/template(\`<button>\`);
function Button() {
  return _tmpl$();
}
function Element() {
  return "some content";
}
export { Button, Element as default };
//# sourceMappingURL=index-native-experimental-esm.js.map
"
`;

exports[`Solid/JSX > babel > transforms example test case: native-experimental-lib > lib/index-native-experimental-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: experimental, Format: lib

'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});
const web = require('solid-js/web');
var _tmpl$ = /*#__PURE__*/web.template(\`<button>\`);
function Button() {
  return _tmpl$();
}
function Element() {
  return "some content";
}
exports.Button = Button;
exports.default = Element;
//# sourceMappingURL=index-native-experimental-lib.js.map
"
`;

exports[`Solid/JSX > babel > transforms example test case: native-legacy-esm > esm/index-native-legacy-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: legacy, Format: esm

import { template } from 'solid-js/web';
var _tmpl$ = /*#__PURE__*/template(\`<button>\`);
function Button() {
  return _tmpl$();
}
function Element() {
  return "some content";
}
export { Button, Element as default };
//# sourceMappingURL=index-native-legacy-esm.js.map
"
`;

exports[`Solid/JSX > babel > transforms example test case: native-legacy-lib > lib/index-native-legacy-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: legacy, Format: lib

'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});
const web = require('solid-js/web');
var _tmpl$ = /*#__PURE__*/web.template(\`<button>\`);
function Button() {
  return _tmpl$();
}
function Element() {
  return "some content";
}
exports.Button = Button;
exports.default = Element;
//# sourceMappingURL=index-native-legacy-lib.js.map
"
`;

exports[`Solid/JSX > babel > transforms example test case: native-stable-esm > esm/index-native-stable-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: stable, Format: esm

import { template } from 'solid-js/web';
var _tmpl$ = /*#__PURE__*/template(\`<button>\`);
function Button() {
  return _tmpl$();
}
function Element() {
  return "some content";
}
export { Button, Element as default };
//# sourceMappingURL=index-native-stable-esm.js.map
"
`;

exports[`Solid/JSX > babel > transforms example test case: native-stable-lib > lib/index-native-stable-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: stable, Format: lib

'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});
const web = require('solid-js/web');
var _tmpl$ = /*#__PURE__*/web.template(\`<button>\`);
function Button() {
  return _tmpl$();
}
function Element() {
  return "some content";
}
exports.Button = Button;
exports.default = Element;
//# sourceMappingURL=index-native-stable-lib.js.map
"
`;

exports[`Solid/JSX > babel > transforms example test case: node-current-cjs > cjs/index-node-current-cjs.cjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: cjs

'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});
const web = require('solid-js/web');
var _tmpl$ = /*#__PURE__*/web.template(\`<button>\`);
function Button() {
  return _tmpl$();
}
function Element() {
  return "some content";
}
exports.Button = Button;
exports.default = Element;
//# sourceMappingURL=index-node-current-cjs.cjs.map
"
`;

exports[`Solid/JSX > babel > transforms example test case: node-current-cjs > cjs/index-node-current-cjs-wrapper.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import data from './index-node-current-cjs.cjs';

export const { Button } = data;
export default data.default;"
`;

exports[`Solid/JSX > babel > transforms example test case: node-current-lib > lib/index-node-current-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: lib

'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});
const web = require('solid-js/web');
var _tmpl$ = /*#__PURE__*/web.template(\`<button>\`);
function Button() {
  return _tmpl$();
}
function Element() {
  return "some content";
}
exports.Button = Button;
exports.default = Element;
//# sourceMappingURL=index-node-current-lib.js.map
"
`;

exports[`Solid/JSX > babel > transforms example test case: node-current-mjs > mjs/index-node-current-mjs.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: mjs

import { template } from 'solid-js/web';
var _tmpl$ = /*#__PURE__*/template(\`<button>\`);
function Button() {
  return _tmpl$();
}
function Element() {
  return "some content";
}
export { Button, Element as default };
//# sourceMappingURL=index-node-current-mjs.mjs.map
"
`;

exports[`Solid/JSX > babel > transforms example test case: node-experimental-cjs > cjs/index-node-experimental-cjs.cjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: cjs

'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});
const web = require('solid-js/web');
var _tmpl$ = /*#__PURE__*/web.template(\`<button>\`);
function Button() {
  return _tmpl$();
}
function Element() {
  return "some content";
}
exports.Button = Button;
exports.default = Element;
//# sourceMappingURL=index-node-experimental-cjs.cjs.map
"
`;

exports[`Solid/JSX > babel > transforms example test case: node-experimental-cjs > cjs/index-node-experimental-cjs-wrapper.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import data from './index-node-experimental-cjs.cjs';

export const { Button } = data;
export default data.default;"
`;

exports[`Solid/JSX > babel > transforms example test case: node-experimental-lib > lib/index-node-experimental-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: lib

'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});
const web = require('solid-js/web');
var _tmpl$ = /*#__PURE__*/web.template(\`<button>\`);
function Button() {
  return _tmpl$();
}
function Element() {
  return "some content";
}
exports.Button = Button;
exports.default = Element;
//# sourceMappingURL=index-node-experimental-lib.js.map
"
`;

exports[`Solid/JSX > babel > transforms example test case: node-experimental-mjs > mjs/index-node-experimental-mjs.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: mjs

import { template } from 'solid-js/web';
var _tmpl$ = /*#__PURE__*/template(\`<button>\`);
function Button() {
  return _tmpl$();
}
function Element() {
  return "some content";
}
export { Button, Element as default };
//# sourceMappingURL=index-node-experimental-mjs.mjs.map
"
`;

exports[`Solid/JSX > babel > transforms example test case: node-legacy-cjs > cjs/index-node-legacy-cjs.cjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: cjs

'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});
const web = require('solid-js/web');
var _tmpl$ = /*#__PURE__*/web.template(\`<button>\`);
function Button() {
  return _tmpl$();
}
function Element() {
  return "some content";
}
exports.Button = Button;
exports.default = Element;
//# sourceMappingURL=index-node-legacy-cjs.cjs.map
"
`;

exports[`Solid/JSX > babel > transforms example test case: node-legacy-cjs > cjs/index-node-legacy-cjs-wrapper.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import data from './index-node-legacy-cjs.cjs';

export const { Button } = data;
export default data.default;"
`;

exports[`Solid/JSX > babel > transforms example test case: node-legacy-lib > lib/index-node-legacy-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: lib

'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});
const web = require('solid-js/web');
var _tmpl$ = /*#__PURE__*/web.template(\`<button>\`);
function Button() {
  return _tmpl$();
}
function Element() {
  return "some content";
}
exports.Button = Button;
exports.default = Element;
//# sourceMappingURL=index-node-legacy-lib.js.map
"
`;

exports[`Solid/JSX > babel > transforms example test case: node-legacy-mjs > mjs/index-node-legacy-mjs.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: mjs

import { template } from 'solid-js/web';
var _tmpl$ = /*#__PURE__*/template(\`<button>\`);
function Button() {
  return _tmpl$();
}
function Element() {
  return "some content";
}
export { Button, Element as default };
//# sourceMappingURL=index-node-legacy-mjs.mjs.map
"
`;

exports[`Solid/JSX > babel > transforms example test case: node-stable-cjs > cjs/index-node-stable-cjs.cjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: cjs

'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});
const web = require('solid-js/web');
var _tmpl$ = /*#__PURE__*/web.template(\`<button>\`);
function Button() {
  return _tmpl$();
}
function Element() {
  return "some content";
}
exports.Button = Button;
exports.default = Element;
//# sourceMappingURL=index-node-stable-cjs.cjs.map
"
`;

exports[`Solid/JSX > babel > transforms example test case: node-stable-cjs > cjs/index-node-stable-cjs-wrapper.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import data from './index-node-stable-cjs.cjs';

export const { Button } = data;
export default data.default;"
`;

exports[`Solid/JSX > babel > transforms example test case: node-stable-lib > lib/index-node-stable-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: lib

'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});
const web = require('solid-js/web');
var _tmpl$ = /*#__PURE__*/web.template(\`<button>\`);
function Button() {
  return _tmpl$();
}
function Element() {
  return "some content";
}
exports.Button = Button;
exports.default = Element;
//# sourceMappingURL=index-node-stable-lib.js.map
"
`;

exports[`Solid/JSX > babel > transforms example test case: node-stable-mjs > mjs/index-node-stable-mjs.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: mjs

import { template } from 'solid-js/web';
var _tmpl$ = /*#__PURE__*/template(\`<button>\`);
function Button() {
  return _tmpl$();
}
function Element() {
  return "some content";
}
export { Button, Element as default };
//# sourceMappingURL=index-node-stable-mjs.mjs.map
"
`;

exports[`Solid/JSX > swc > transforms example test case: browser-current-esm > esm/index-browser-current-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: esm
function Button() {
    return /*#__PURE__*/ React.createElement("button", null);
}
function Element() {
    return /*#__PURE__*/ React.createElement(React.Fragment, null, "some content");
}
export { Button, Element as default };
//# sourceMappingURL=index-browser-current-esm.js.map
"
`;

exports[`Solid/JSX > swc > transforms example test case: browser-current-lib > lib/index-browser-current-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: lib
'use strict';
Object.defineProperty(exports, '__esModule', {
    value: true
});
function Button() {
    return /*#__PURE__*/ React.createElement("button", null);
}
function Element() {
    return /*#__PURE__*/ React.createElement(React.Fragment, null, "some content");
}
exports.Button = Button;
exports.default = Element;
//# sourceMappingURL=index-browser-current-lib.js.map
"
`;

exports[`Solid/JSX > swc > transforms example test case: browser-current-umd > umd/index-browser-current-umd.js 1`] = `
"(function(global, factory) {
    if (typeof module === "object" && typeof module.exports === "object") factory(exports);
    else if (typeof define === "function" && define.amd) define([
        "exports"
    ], factory);
    else if (global = typeof globalThis !== "undefined" ? globalThis : global || self) factory(global.exampleSolid = {});
})(this, function(exports) {
    "use strict";
    Object.defineProperty(exports, "__esModule", {
        value: true
    });
    function _export(target, all) {
        for(var name in all)Object.defineProperty(target, name, {
            enumerable: true,
            get: Object.getOwnPropertyDescriptor(all, name).get
        });
    }
    _export(exports, {
        get Button () {
            return Button;
        },
        get default () {
            return Element;
        }
    });
    function Button() {
        return /*#__PURE__*/ React.createElement("button", null);
    }
    function Element() {
        return /*#__PURE__*/ React.createElement(React.Fragment, null, "some content");
    }
});
//# sourceMappingURL=index-browser-current-umd.js.map
"
`;

exports[`Solid/JSX > swc > transforms example test case: browser-experimental-esm > esm/index-browser-experimental-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: esm
function Button() {
    return /*#__PURE__*/ React.createElement("button", null);
}
function Element() {
    return /*#__PURE__*/ React.createElement(React.Fragment, null, "some content");
}
export { Button, Element as default };
//# sourceMappingURL=index-browser-experimental-esm.js.map
"
`;

exports[`Solid/JSX > swc > transforms example test case: browser-experimental-lib > lib/index-browser-experimental-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: lib
'use strict';
Object.defineProperty(exports, '__esModule', {
    value: true
});
function Button() {
    return /*#__PURE__*/ React.createElement("button", null);
}
function Element() {
    return /*#__PURE__*/ React.createElement(React.Fragment, null, "some content");
}
exports.Button = Button;
exports.default = Element;
//# sourceMappingURL=index-browser-experimental-lib.js.map
"
`;

exports[`Solid/JSX > swc > transforms example test case: browser-experimental-umd > umd/index-browser-experimental-umd.js 1`] = `
"(function(global, factory) {
    if (typeof module === "object" && typeof module.exports === "object") factory(exports);
    else if (typeof define === "function" && define.amd) define([
        "exports"
    ], factory);
    else if (global = typeof globalThis !== "undefined" ? globalThis : global || self) factory(global.exampleSolid = {});
})(this, function(exports) {
    "use strict";
    Object.defineProperty(exports, "__esModule", {
        value: true
    });
    function _export(target, all) {
        for(var name in all)Object.defineProperty(target, name, {
            enumerable: true,
            get: Object.getOwnPropertyDescriptor(all, name).get
        });
    }
    _export(exports, {
        get Button () {
            return Button;
        },
        get default () {
            return Element;
        }
    });
    function Button() {
        return /*#__PURE__*/ React.createElement("button", null);
    }
    function Element() {
        return /*#__PURE__*/ React.createElement(React.Fragment, null, "some content");
    }
});
//# sourceMappingURL=index-browser-experimental-umd.js.map
"
`;

exports[`Solid/JSX > swc > transforms example test case: browser-legacy-esm > esm/index-browser-legacy-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: esm
function Button() {
    return /*#__PURE__*/ React.createElement("button", null);
}
function Element() {
    return /*#__PURE__*/ React.createElement(React.Fragment, null, "some content");
}
export { Button, Element as default };
//# sourceMappingURL=index-browser-legacy-esm.js.map
"
`;

exports[`Solid/JSX > swc > transforms example test case: browser-legacy-lib > lib/index-browser-legacy-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: lib
'use strict';
Object.defineProperty(exports, '__esModule', {
    value: true
});
function Button() {
    return /*#__PURE__*/ React.createElement("button", null);
}
function Element() {
    return /*#__PURE__*/ React.createElement(React.Fragment, null, "some content");
}
exports.Button = Button;
exports.default = Element;
//# sourceMappingURL=index-browser-legacy-lib.js.map
"
`;

exports[`Solid/JSX > swc > transforms example test case: browser-legacy-umd > umd/index-browser-legacy-umd.js 1`] = `
"(function(global, factory) {
    if (typeof module === "object" && typeof module.exports === "object") factory(exports);
    else if (typeof define === "function" && define.amd) define([
        "exports"
    ], factory);
    else if (global = typeof globalThis !== "undefined" ? globalThis : global || self) factory(global.exampleSolid = {});
})(this, function(exports) {
    "use strict";
    Object.defineProperty(exports, "__esModule", {
        value: true
    });
    function _export(target, all) {
        for(var name in all)Object.defineProperty(target, name, {
            enumerable: true,
            get: Object.getOwnPropertyDescriptor(all, name).get
        });
    }
    _export(exports, {
        get Button () {
            return Button;
        },
        get default () {
            return Element;
        }
    });
    function Button() {
        return /*#__PURE__*/ React.createElement("button", null);
    }
    function Element() {
        return /*#__PURE__*/ React.createElement(React.Fragment, null, "some content");
    }
});
//# sourceMappingURL=index-browser-legacy-umd.js.map
"
`;

exports[`Solid/JSX > swc > transforms example test case: browser-stable-esm > esm/index-browser-stable-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: esm
function Button() {
    return /*#__PURE__*/ React.createElement("button", null);
}
function Element() {
    return /*#__PURE__*/ React.createElement(React.Fragment, null, "some content");
}
export { Button, Element as default };
//# sourceMappingURL=index-browser-stable-esm.js.map
"
`;

exports[`Solid/JSX > swc > transforms example test case: browser-stable-lib > lib/index-browser-stable-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: lib
'use strict';
Object.defineProperty(exports, '__esModule', {
    value: true
});
function Button() {
    return /*#__PURE__*/ React.createElement("button", null);
}
function Element() {
    return /*#__PURE__*/ React.createElement(React.Fragment, null, "some content");
}
exports.Button = Button;
exports.default = Element;
//# sourceMappingURL=index-browser-stable-lib.js.map
"
`;

exports[`Solid/JSX > swc > transforms example test case: browser-stable-umd > umd/index-browser-stable-umd.js 1`] = `
"(function(global, factory) {
    if (typeof module === "object" && typeof module.exports === "object") factory(exports);
    else if (typeof define === "function" && define.amd) define([
        "exports"
    ], factory);
    else if (global = typeof globalThis !== "undefined" ? globalThis : global || self) factory(global.exampleSolid = {});
})(this, function(exports) {
    "use strict";
    Object.defineProperty(exports, "__esModule", {
        value: true
    });
    function _export(target, all) {
        for(var name in all)Object.defineProperty(target, name, {
            enumerable: true,
            get: Object.getOwnPropertyDescriptor(all, name).get
        });
    }
    _export(exports, {
        get Button () {
            return Button;
        },
        get default () {
            return Element;
        }
    });
    function Button() {
        return /*#__PURE__*/ React.createElement("button", null);
    }
    function Element() {
        return /*#__PURE__*/ React.createElement(React.Fragment, null, "some content");
    }
});
//# sourceMappingURL=index-browser-stable-umd.js.map
"
`;

exports[`Solid/JSX > swc > transforms example test case: electron-current-esm > esm/index-electron-current-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: current, Format: esm
function Button() {
    return /*#__PURE__*/ React.createElement("button", null);
}
function Element() {
    return /*#__PURE__*/ React.createElement(React.Fragment, null, "some content");
}
export { Button, Element as default };
//# sourceMappingURL=index-electron-current-esm.js.map
"
`;

exports[`Solid/JSX > swc > transforms example test case: electron-current-lib > lib/index-electron-current-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: current, Format: lib
'use strict';
Object.defineProperty(exports, '__esModule', {
    value: true
});
function Button() {
    return /*#__PURE__*/ React.createElement("button", null);
}
function Element() {
    return /*#__PURE__*/ React.createElement(React.Fragment, null, "some content");
}
exports.Button = Button;
exports.default = Element;
//# sourceMappingURL=index-electron-current-lib.js.map
"
`;

exports[`Solid/JSX > swc > transforms example test case: electron-experimental-esm > esm/index-electron-experimental-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: experimental, Format: esm
function Button() {
    return /*#__PURE__*/ React.createElement("button", null);
}
function Element() {
    return /*#__PURE__*/ React.createElement(React.Fragment, null, "some content");
}
export { Button, Element as default };
//# sourceMappingURL=index-electron-experimental-esm.js.map
"
`;

exports[`Solid/JSX > swc > transforms example test case: electron-experimental-lib > lib/index-electron-experimental-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: experimental, Format: lib
'use strict';
Object.defineProperty(exports, '__esModule', {
    value: true
});
function Button() {
    return /*#__PURE__*/ React.createElement("button", null);
}
function Element() {
    return /*#__PURE__*/ React.createElement(React.Fragment, null, "some content");
}
exports.Button = Button;
exports.default = Element;
//# sourceMappingURL=index-electron-experimental-lib.js.map
"
`;

exports[`Solid/JSX > swc > transforms example test case: electron-legacy-esm > esm/index-electron-legacy-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: legacy, Format: esm
function Button() {
    return /*#__PURE__*/ React.createElement("button", null);
}
function Element() {
    return /*#__PURE__*/ React.createElement(React.Fragment, null, "some content");
}
export { Button, Element as default };
//# sourceMappingURL=index-electron-legacy-esm.js.map
"
`;

exports[`Solid/JSX > swc > transforms example test case: electron-legacy-lib > lib/index-electron-legacy-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: legacy, Format: lib
'use strict';
Object.defineProperty(exports, '__esModule', {
    value: true
});
function Button() {
    return /*#__PURE__*/ React.createElement("button", null);
}
function Element() {
    return /*#__PURE__*/ React.createElement(React.Fragment, null, "some content");
}
exports.Button = Button;
exports.default = Element;
//# sourceMappingURL=index-electron-legacy-lib.js.map
"
`;

exports[`Solid/JSX > swc > transforms example test case: electron-stable-esm > esm/index-electron-stable-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: stable, Format: esm
function Button() {
    return /*#__PURE__*/ React.createElement("button", null);
}
function Element() {
    return /*#__PURE__*/ React.createElement(React.Fragment, null, "some content");
}
export { Button, Element as default };
//# sourceMappingURL=index-electron-stable-esm.js.map
"
`;

exports[`Solid/JSX > swc > transforms example test case: electron-stable-lib > lib/index-electron-stable-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: stable, Format: lib
'use strict';
Object.defineProperty(exports, '__esModule', {
    value: true
});
function Button() {
    return /*#__PURE__*/ React.createElement("button", null);
}
function Element() {
    return /*#__PURE__*/ React.createElement(React.Fragment, null, "some content");
}
exports.Button = Button;
exports.default = Element;
//# sourceMappingURL=index-electron-stable-lib.js.map
"
`;

exports[`Solid/JSX > swc > transforms example test case: native-current-esm > esm/index-native-current-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: current, Format: esm
function Button() {
    return /*#__PURE__*/ React.createElement("button", null);
}
function Element() {
    return /*#__PURE__*/ React.createElement(React.Fragment, null, "some content");
}
export { Button, Element as default };
//# sourceMappingURL=index-native-current-esm.js.map
"
`;

exports[`Solid/JSX > swc > transforms example test case: native-current-lib > lib/index-native-current-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: current, Format: lib
'use strict';
Object.defineProperty(exports, '__esModule', {
    value: true
});
function Button() {
    return /*#__PURE__*/ React.createElement("button", null);
}
function Element() {
    return /*#__PURE__*/ React.createElement(React.Fragment, null, "some content");
}
exports.Button = Button;
exports.default = Element;
//# sourceMappingURL=index-native-current-lib.js.map
"
`;

exports[`Solid/JSX > swc > transforms example test case: native-experimental-esm > esm/index-native-experimental-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: experimental, Format: esm
function Button() {
    return /*#__PURE__*/ React.createElement("button", null);
}
function Element() {
    return /*#__PURE__*/ React.createElement(React.Fragment, null, "some content");
}
export { Button, Element as default };
//# sourceMappingURL=index-native-experimental-esm.js.map
"
`;

exports[`Solid/JSX > swc > transforms example test case: native-experimental-lib > lib/index-native-experimental-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: experimental, Format: lib
'use strict';
Object.defineProperty(exports, '__esModule', {
    value: true
});
function Button() {
    return /*#__PURE__*/ React.createElement("button", null);
}
function Element() {
    return /*#__PURE__*/ React.createElement(React.Fragment, null, "some content");
}
exports.Button = Button;
exports.default = Element;
//# sourceMappingURL=index-native-experimental-lib.js.map
"
`;

exports[`Solid/JSX > swc > transforms example test case: native-legacy-esm > esm/index-native-legacy-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: legacy, Format: esm
function Button() {
    return /*#__PURE__*/ React.createElement("button", null);
}
function Element() {
    return /*#__PURE__*/ React.createElement(React.Fragment, null, "some content");
}
export { Button, Element as default };
//# sourceMappingURL=index-native-legacy-esm.js.map
"
`;

exports[`Solid/JSX > swc > transforms example test case: native-legacy-lib > lib/index-native-legacy-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: legacy, Format: lib
'use strict';
Object.defineProperty(exports, '__esModule', {
    value: true
});
function Button() {
    return /*#__PURE__*/ React.createElement("button", null);
}
function Element() {
    return /*#__PURE__*/ React.createElement(React.Fragment, null, "some content");
}
exports.Button = Button;
exports.default = Element;
//# sourceMappingURL=index-native-legacy-lib.js.map
"
`;

exports[`Solid/JSX > swc > transforms example test case: native-stable-esm > esm/index-native-stable-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: stable, Format: esm
function Button() {
    return /*#__PURE__*/ React.createElement("button", null);
}
function Element() {
    return /*#__PURE__*/ React.createElement(React.Fragment, null, "some content");
}
export { Button, Element as default };
//# sourceMappingURL=index-native-stable-esm.js.map
"
`;

exports[`Solid/JSX > swc > transforms example test case: native-stable-lib > lib/index-native-stable-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: stable, Format: lib
'use strict';
Object.defineProperty(exports, '__esModule', {
    value: true
});
function Button() {
    return /*#__PURE__*/ React.createElement("button", null);
}
function Element() {
    return /*#__PURE__*/ React.createElement(React.Fragment, null, "some content");
}
exports.Button = Button;
exports.default = Element;
//# sourceMappingURL=index-native-stable-lib.js.map
"
`;

exports[`Solid/JSX > swc > transforms example test case: node-current-cjs > cjs/index-node-current-cjs.cjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: cjs
'use strict';
Object.defineProperty(exports, '__esModule', {
    value: true
});
function Button() {
    return /*#__PURE__*/ React.createElement("button", null);
}
function Element() {
    return /*#__PURE__*/ React.createElement(React.Fragment, null, "some content");
}
exports.Button = Button;
exports.default = Element;
//# sourceMappingURL=index-node-current-cjs.cjs.map
"
`;

exports[`Solid/JSX > swc > transforms example test case: node-current-cjs > cjs/index-node-current-cjs-wrapper.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import data from './index-node-current-cjs.cjs';

export const { Button } = data;
export default data.default;"
`;

exports[`Solid/JSX > swc > transforms example test case: node-current-lib > lib/index-node-current-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: lib
'use strict';
Object.defineProperty(exports, '__esModule', {
    value: true
});
function Button() {
    return /*#__PURE__*/ React.createElement("button", null);
}
function Element() {
    return /*#__PURE__*/ React.createElement(React.Fragment, null, "some content");
}
exports.Button = Button;
exports.default = Element;
//# sourceMappingURL=index-node-current-lib.js.map
"
`;

exports[`Solid/JSX > swc > transforms example test case: node-current-mjs > mjs/index-node-current-mjs.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: mjs
function Button() {
    return /*#__PURE__*/ React.createElement("button", null);
}
function Element() {
    return /*#__PURE__*/ React.createElement(React.Fragment, null, "some content");
}
export { Button, Element as default };
//# sourceMappingURL=index-node-current-mjs.mjs.map
"
`;

exports[`Solid/JSX > swc > transforms example test case: node-experimental-cjs > cjs/index-node-experimental-cjs.cjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: cjs
'use strict';
Object.defineProperty(exports, '__esModule', {
    value: true
});
function Button() {
    return /*#__PURE__*/ React.createElement("button", null);
}
function Element() {
    return /*#__PURE__*/ React.createElement(React.Fragment, null, "some content");
}
exports.Button = Button;
exports.default = Element;
//# sourceMappingURL=index-node-experimental-cjs.cjs.map
"
`;

exports[`Solid/JSX > swc > transforms example test case: node-experimental-cjs > cjs/index-node-experimental-cjs-wrapper.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import data from './index-node-experimental-cjs.cjs';

export const { Button } = data;
export default data.default;"
`;

exports[`Solid/JSX > swc > transforms example test case: node-experimental-lib > lib/index-node-experimental-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: lib
'use strict';
Object.defineProperty(exports, '__esModule', {
    value: true
});
function Button() {
    return /*#__PURE__*/ React.createElement("button", null);
}
function Element() {
    return /*#__PURE__*/ React.createElement(React.Fragment, null, "some content");
}
exports.Button = Button;
exports.default = Element;
//# sourceMappingURL=index-node-experimental-lib.js.map
"
`;

exports[`Solid/JSX > swc > transforms example test case: node-experimental-mjs > mjs/index-node-experimental-mjs.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: mjs
function Button() {
    return /*#__PURE__*/ React.createElement("button", null);
}
function Element() {
    return /*#__PURE__*/ React.createElement(React.Fragment, null, "some content");
}
export { Button, Element as default };
//# sourceMappingURL=index-node-experimental-mjs.mjs.map
"
`;

exports[`Solid/JSX > swc > transforms example test case: node-legacy-cjs > cjs/index-node-legacy-cjs.cjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: cjs
'use strict';
Object.defineProperty(exports, '__esModule', {
    value: true
});
function Button() {
    return /*#__PURE__*/ React.createElement("button", null);
}
function Element() {
    return /*#__PURE__*/ React.createElement(React.Fragment, null, "some content");
}
exports.Button = Button;
exports.default = Element;
//# sourceMappingURL=index-node-legacy-cjs.cjs.map
"
`;

exports[`Solid/JSX > swc > transforms example test case: node-legacy-cjs > cjs/index-node-legacy-cjs-wrapper.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import data from './index-node-legacy-cjs.cjs';

export const { Button } = data;
export default data.default;"
`;

exports[`Solid/JSX > swc > transforms example test case: node-legacy-lib > lib/index-node-legacy-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: lib
'use strict';
Object.defineProperty(exports, '__esModule', {
    value: true
});
function Button() {
    return /*#__PURE__*/ React.createElement("button", null);
}
function Element() {
    return /*#__PURE__*/ React.createElement(React.Fragment, null, "some content");
}
exports.Button = Button;
exports.default = Element;
//# sourceMappingURL=index-node-legacy-lib.js.map
"
`;

exports[`Solid/JSX > swc > transforms example test case: node-legacy-mjs > mjs/index-node-legacy-mjs.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: mjs
function Button() {
    return /*#__PURE__*/ React.createElement("button", null);
}
function Element() {
    return /*#__PURE__*/ React.createElement(React.Fragment, null, "some content");
}
export { Button, Element as default };
//# sourceMappingURL=index-node-legacy-mjs.mjs.map
"
`;

exports[`Solid/JSX > swc > transforms example test case: node-stable-cjs > cjs/index-node-stable-cjs.cjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: cjs
'use strict';
Object.defineProperty(exports, '__esModule', {
    value: true
});
function Button() {
    return /*#__PURE__*/ React.createElement("button", null);
}
function Element() {
    return /*#__PURE__*/ React.createElement(React.Fragment, null, "some content");
}
exports.Button = Button;
exports.default = Element;
//# sourceMappingURL=index-node-stable-cjs.cjs.map
"
`;

exports[`Solid/JSX > swc > transforms example test case: node-stable-cjs > cjs/index-node-stable-cjs-wrapper.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import data from './index-node-stable-cjs.cjs';

export const { Button } = data;
export default data.default;"
`;

exports[`Solid/JSX > swc > transforms example test case: node-stable-lib > lib/index-node-stable-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: lib
'use strict';
Object.defineProperty(exports, '__esModule', {
    value: true
});
function Button() {
    return /*#__PURE__*/ React.createElement("button", null);
}
function Element() {
    return /*#__PURE__*/ React.createElement(React.Fragment, null, "some content");
}
exports.Button = Button;
exports.default = Element;
//# sourceMappingURL=index-node-stable-lib.js.map
"
`;

exports[`Solid/JSX > swc > transforms example test case: node-stable-mjs > mjs/index-node-stable-mjs.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: mjs
function Button() {
    return /*#__PURE__*/ React.createElement("button", null);
}
function Element() {
    return /*#__PURE__*/ React.createElement(React.Fragment, null, "some content");
}
export { Button, Element as default };
//# sourceMappingURL=index-node-stable-mjs.mjs.map
"
`;
